--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="marron">
     <ion-title>
-      About
+      Sobre
     </ion-title>
   </ion-navbar>
 </ion-header>
