--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,29 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="marron">
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <div style="height: 130px;"></div>
+  <ion-grid text-center>
+    <ion-row> 
+      <ion-col>
+        <button ion-button outline round color="marron" (click)="play()"><ion-icon name="play" style="font-size: 30px;color: #9c4f4f;"></ion-icon>
+        </button>        
+      </ion-col>
+      <ion-col>
+        <button ion-button outline round color="marron" (click)="pause()"><ion-icon name="pause" style="font-size: 30px;color: #9c4f4f;"></ion-icon></button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <button ion-button outline round color="marron" (click)="time()"><ion-icon name="time" style="font-size: 30px; color: #9c4f4f"></ion-icon></button>
+
+      </ion-col>
+      <ion-col>
+        <button ion-button outline round color="marron"><ion-icon name="custom-config" style="font-size: 30px; color: #9c4f4f"></ion-icon></button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
